menu alignment fix

--- a/css/style.css
+++ b/css/style.css
@@ -819,6 +819,7 @@ table tr td a { color: #e93e21; }
 .menu-body.menu-left { text-align: left; }
 .menu-body.menu-left .menu-thumbnail { float: left; margin-right: 20px; width: 100px;  }
 .menu-body.menu-left .menu-details { 
+    display: table-cell;
  }
 .menu-body.menu-left .menu-title { display: block; border-bottom: 1px dashed #909090; padding-bottom: 10px; text-align: center; }
 .menu-body.menu-left .menu-title h4 { display: inline-block; }
